# impressle

./: .gitignore  Dockerfile  Pipfile  README.md  babel.cfg  config.py  db_backup.py  full_clean.sh  main.py  messages.pot  pyproject.toml  requirements.txt  setup.sh
translations/ru/LC_MESSAGES/: messages.mo  messages.po
website/: __init__.py  admin.py  api.py  auth.py  extensions.py  models.py  routes.py  views.py
website/static/: canvas.js  style.css
website/static/scripts/: canvas.js  index.js
website/static/styles/: style.css
website/templates/: about.html  access_admin.html  admin.html  banned.html  base.html  create_picture.html  create_post.html  div_comment.html  div_compact_profile.html  div_picture.html  div_post.html  div_posts.html  edit_picture.html  faq.html  feed.html  following.html  inactive.html  index.html  leaderboard.html  liked.html  login.html  logout.html  picture.html  post.html  privacy_policy.html  search.html  signup.html  terms_of_service.html  user_profile.html  user_settings.html
